--- a/render.yaml
+++ b/render.yaml
@@ -14,5 +14,39 @@ services:
     healthCheckPath: /
     #startCommand: npm start
     envVars:
+      - key: SESSION_IDservices:
+  - type: web
+    plan: free
+    name: queen-anju-md
+    runtime: docker
+    region: Frankfurt
+    branch: V-3.00
+    repo: https://github.com/Mrrashmika/QUEEN_ANJU_MD
+    #buildCommand: |
+    #  apt-get update && \
+    #  apt-get install -y ffmpeg && \
+    #  npm install
+    autoDeploy: true
+    healthCheckPath: /
+    #startCommand: npm start
+    envVars:
       - key: SESSION_ID
+        value:services:
+  - type: web
+    plan: free
+    name: queen-anju-md
+    runtime: docker
+    region: Frankfurt
+    branch: V-3.00
+    repo: https://github.com/Mrrashmika/QUEEN_ANJU_MD
+    #buildCommand: |
+    #  apt-get update && \
+    #  apt-get install -y ffmpeg && \
+    #  npm install
+    autoDeploy: true
+    healthCheckPath: /
+    #startCommand: npm start
+    envVars:
+      - key: SESSION_ID
+        value: "YOUR_SESSION_ID"
         value: "YOUR_SESSION_ID"
